# agent

./: .dockerignore  .env.example  .gitignore  AGENT_ARCHITECTURE.md  API_USAGE.md  DOCKER_GUIDE.md  Dockerfile  README.md  docker-compose.yml  ecs-task-definition.json  index.html  main.py  pyproject.toml  run_tests.sh  test.py  test_cases.json  test_stream_client.html  test_stream_client.py  test_stream_simple.py
.github/workflows/: deploy.yml
frontend/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/assistant-ui/: thread.tsx
frontend/src/components/ui/: button.tsx  tooltip.tsx
frontend/src/lib/: utils.ts
frontend/src/types/: message.ts
src/: auth.py  main.py  utils.py
src/agents/: __init__.py  classifier.py  main.py  mcp_utils.py  schema.py  scrum_agent.py  user-input-analyzer.py  utils.py
src/agents/assistant/: __init__.py  agent.py
src/agents/scrum/: __init__.py
src/agents/team/: 06-LangGraph-Human-In-the-Loop.ipynb  08-LangGraph-Hierarchial-Agent-Team.ipynb  10-LangGraph-ToolNode.ipynb  __init__.py  common_tools.py  factory.py  supervisor.py  tool.py
src/graph/: __init__.py  create_supervisor.py  scrum_agent.py  supervisor_prompt.py
src/interal_types/: __init__.py  message.py
src/models/: state.py
src/team/: __init__.py  hand_off_agent.py  mcp_utils.py
src/team/backlog/: __init__.py  agent.py  prompt.py
src/team/project/: __init__.py  agent.py  prompt.py
src/team/sprint/: __init__.py  agent.py  prompt.py
(+38 files in other folders)
